Changed Index Page

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						<ul class="actions">
 							<li ><a href="#two"  class="button">Recent Work</a></li>
 							<!-- <li><a href="#three" class="button">Skils</a></li> -->
-							<li><a href="#ResumeLink" class="button">View Resume</a></li>
+							<li><a href="resume/" class="button" download>View Resume</a></li>
 							<li><a href="#four" class="button">Contact</a></li>
 						</ul>
 					</section>
@@ -48,6 +48,8 @@
 										<h2 class="recent-work-MainText" >Novi Webshop</h2>
 										<h3 >Webshop where the customer can lend art and pay with Ether</h3>
 											<li class="recent-Work-Hyperlinks"><a href="#four" class="button btn-block">Live Demo</a></li>
+											<li class="recent-Work-Hyperlinks"> <a href="functional plan/Android Studio - JAVA - Functional Plan.pdf" class="button btn-block" download>Functional Plan</a></li>
+											<li class="recent-Work-Hyperlinks" > <a href="technical plan/Android Studio - Technical Plan.pdf" class="button btn-block" download>Technical Plan</a></li>
 											<li class="recent-Work-Hyperlinks"> <a href="#four" class="button btn-block">Github Code</a></li>
 											<div>
 											<div class="card-header">
@@ -63,7 +65,7 @@
 									</div>
 								</article>
 								<article class="col-6 col-12-xsmall work-item" >
-									<div class="recent-Work "  style="margin-top: 30px;"> 
+									<div class="recent-Work " > 
 										<div  style="margin-top: 20px;">
 											<img class="image fit thumbnail " src="images/Coffee-Machine.JPG" alt="Coffee Machine" />
 										</div>
@@ -73,8 +75,9 @@
 										<div class="underTextMargin-bottom">
 											<h3  > Site that simulates a coffee machine</h3>
 										</div>
-												<li class="recent-Work-Hyperlinks"><a href="#four" class="button btn-block">Live Demo</a></li>
-												<li class="recent-Work-Hyperlinks"> <a href="#four" class="button btn-block">Github Code</a></li>
+												<li class="recent-Work-Hyperlinks"><a href="https://dry-beyond-32422.herokuapp.com/" target="_blank" class="button btn-block">Live Demo</a></li>
+												<li class="recent-Work-Hyperlinks" > <a href="technical plan/React-Verantwoording.pdf" class="button btn-block" download>Technical Plan</a></li>
+												<li class="recent-Work-Hyperlinks"> <a href="https://github.com/TyronKemble/SweetCoffeeMachine" target="_blank" class="button btn-block">Github Code</a></li>
 												<div>
 												<div class="card-header">
 													Skills
@@ -87,9 +90,50 @@
 								<article class="col-6 col-12-xsmall work-item " >
 									<div class="recent-Work"> 
 										<div>  
+											<img class="image fit thumbnail" src="images/PyChat.jpg" alt="AndroidApplication" height="250px"  width="150%"/>
+										</div>
+										<h2 class="recent-work-MainText" >Chat Application</h2>
+										<h3  >Chat possiblity between two users and one admin role </h3>
+											<li class="recent-Work-Hyperlinks "><a href="https://www.youtube.com/watch?v=SDtWVMHGUQo" target="_blank" class="button btn-block">Live Demo</a></li>
+											<li class="recent-Work-Hyperlinks" > <a href="technical plan/Python-Plan van aanpak + Verantwoording.pdf" class="button btn-block" download>Technical Plan</a></li>
+											<li class="recent-Work-Hyperlinks"> <a href="https://github.com/TyronKemble/Py-ChatApplication" target="_blank" class="button btn-block">Github Code</a></li>
+											<div>
+											<div class="card-header">
+												Skills
+												</div>
+												<ul class="list-group list-group-flush">
+												  <li class="list-group-item ">Python</li>
+												</ul>
+									</div>
+								</article>
+								<article class="col-6 col-12-xsmall work-item " >
+									<div class="recent-Work"> 
+										<div>  
+											<img class="image fit thumbnail" src="images/AndroidApplication.jpg" alt="AndroidApplication" height="250px"  width="150%"/>
+										</div>
+										<h2 class="recent-work-MainText" >NOVI Picture Edit App</h2>
+										<h3 style="margin-bottom: 40px;">Snapchat like mobile application </h3>
+											<li class="recent-Work-Hyperlinks "><a href="https://www.youtube.com/watch?v=x_hzI1BF3g8&t=2s" target="_blank" class="button btn-block">Live Demo</a></li>
+											<li class="recent-Work-Hyperlinks"> <a href="functional plan/Android Studio - JAVA - Functional Plan.pdf" class="button btn-block" download>Functional Plan</a></li>
+											<li class="recent-Work-Hyperlinks" > <a href="technical plan/Android Studio - Technical Plan.pdf" class="button btn-block" download>Technical Plan</a></li>
+											<li class="recent-Work-Hyperlinks"> <a href="https://github.com/TyronKemble/Android-Studio--Employe-Of-The-Month-App" target="_blank" class="button btn-block">Github Code</a></li>
+											<div>
+											<div class="card-header">
+												Skills
+												</div>
+												<ul class="list-group list-group-flush">
+												  <li class="list-group-item ">Android Studio</li>
+												  <li class="list-group-item">Java</li>
+												  <li class="list-group-item">OOP</li>
+												</ul>
+									</div>
+								</article>
+								<article class="col-6 col-12-xsmall work-item " >
+									<div class="recent-Work"> 
+										<div>  
 											<img class="image fit thumbnail" src="images/CampingWebsite.JPG" alt="Camping Site" />
 										</div>
-										<h2 class="recent-work-MainText" >Camping Web application</h2>
+										<h2 class="recent-work-MainText" style="margin-bottom: 28px;" >Camping Web application</h2>
 										<h3>Site for booking campings</h3>
 											<li class="recent-Work-Hyperlinks "><a href="https://glacial-mesa-82869.herokuapp.com" target="_blank" class="button btn-block">Live Demo</a></li>
 											<li class="recent-Work-Hyperlinks"> <a href="#four" class="button btn-block">Github Code</a></li>
@@ -108,15 +152,15 @@
 						</div>
 					</section>
 
-					<section id="four">
+					<section id="four" class="coontainer">
 						<h2>Lets Get In Contact </h2>
 						<div class="row">
-							<div class="col-8 col-12-small">
+							<div >
 								<form method="post" action="mailto: Tyron.kemble@gmail.com">
 									<div class="row gtr-uniform gtr-50">
-										<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" required /></div>
-										<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" required /></div>
-										<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="4" required></textarea></div>
+										<div class="col 6 col-11-xsmall"><input type="text" name="name" id="name" placeholder="Name" required /></div>
+										<div class="col-11-xsmall"><input type="email" name="email" id="email" placeholder="Email" required /></div>
+										<div class="col-11"><textarea name="message" id="message" placeholder="Message" rows="4" required></textarea></div>
 									</div>
 									<br />
 									<ul class="actions">
@@ -125,6 +169,7 @@
 								</form >
 							</div>
 						</div>
+					</div>
 					</section>				
 			</div>
 
